# nava

./: .gitignore  CLAUDE.md  DECISIONS.md  PLAN.md  README.md  ROADMAP.md  claude-code-prompt-linux-dictation.md  install.sh  pyproject.toml
bench/: run_bench.py
config/: dictionary.example.toml
docs/: INSTALL.md  deb-smoke-test.md
flowlinux/: __init__.py  cli.py  cli_main.py
flowlinux/asr/: __init__.py  factory.py  postprocess.py
flowlinux/audio/: __init__.py  capture.py  feedback.py  load.py
flowlinux/core/: config.py  dictation.py  recorder_app.py  service.py
flowlinux/diagnostics/: __init__.py  checks.py
flowlinux/format/: __init__.py  base.py  pipeline.py  rules.py
flowlinux/hotkey/: __init__.py  base.py
flowlinux/injection/: manager.py  notify.py  preflight.py  window.py
flowlinux/tui/: __init__.py  banner.py  diagnostics.py  wizard.py
flowlinux/ui/: __init__.py
nava/: __init__.py  cli.py  cli_main.py
nava/asr/: base.py  faster_whisper_backend.py
nava/audio/: feedback.py
nava/core/: __init__.py  config.py  dictation.py  history.py  recorder_app.py  service.py
nava/diagnostics/: __init__.py
nava/format/: dictionary.py  pipeline.py
nava/hotkey/: pynput_x11.py
nava/injection/: __init__.py  base.py  clipboard.py  notify.py  xdotool.py
nava/tui/: __init__.py  banner.py  diagnostics.py  wizard.py
packaging/: flowlinux.service.in  nava.service.in
packaging/appimage/: build_appimage.sh  nava.desktop
packaging/aur/: PKGBUILD
packaging/deb/: build_deb.sh
packaging/systemd/: nava.service
scripts/: m1_zenity_acceptance.sh  record_wer_set.py
tests/: test_asr_integration.py  test_asr_postprocess.py  test_audio.py  test_config.py  test_format.py  test_history.py  test_hotkey.py  test_injection.py
