[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flowlinux"
version = "0.0.1"
description = "System-wide, local-first AI voice dictation for Linux (clean-room)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "FlowLinux" }]

# M1 (injection) is pure-stdlib; backends shell out to xdotool/xclip/notify-send.
dependencies = []

[project.optional-dependencies]
# Installed per-milestone to keep idle footprint small (memory discipline — see PLAN.md).
hotkey = ["pynput>=1.7"]                       # M2: X11 push-to-talk
audio  = ["sounddevice>=0.4", "numpy>=1.24"]   # M2/M3: 16kHz capture
# M3 CPU baseline = faster-whisper (CT2 4.x runs fine on CPU). The GPU path on driver-470 /
# CUDA-11 needs CTranslate2 3.24.x (CT2 4.x needs CUDA 12) OR whisper.cpp-CUDA, handled in a
# separate env in M3 step 2 — see DECISIONS ADR-0005.
asr    = ["faster-whisper>=1.0", "soundfile>=0.12"]  # bundled Silero VAD; soundfile decodes audio
bench  = ["jiwer>=3"]                            # WER for the M3 benchmark harness
tui    = ["rich>=13", "questionary>=2"]         # M5: terminal installer/config/diagnostics (no GUI)
dev    = ["pytest>=7"]

[project.scripts]
flowlinux = "flowlinux.cli_main:main"
flowlinux-inject = "flowlinux.cli:main"

[tool.setuptools.packages.find]
include = ["flowlinux*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
